--- a/gatos.html
+++ b/gatos.html
@@ -14,18 +14,18 @@
         <a class="cabecalho_menu_link" href="programacao.html">Programação</a>
         <a class="cabecalho_menu_link" href="make.html">Make</a>
         <a class="cabecalho_menu_link" href="index.html">Érica</a>
-        <a class="cabecalho_menu_principal" href="cabelo.html">Cabelo</a>
-        <a class="cabecalho_menu_link" href="gatos.html">Gatos</a>
+        <a class="cabecalho_menu_link" href="cabelo.html">Cabelo</a>
+        <a class="cabecalho_menu_principal" href="gatos.html">Gatos</a>
     </nav>
 </header>
 <body>
     <section class="body">
-        <img  class="body_imagem" src="assets/oleocapilar.png">
+        <img  class="body_imagem" src="assets/agata.png">
         <section class="body_texto">
-            <h1 class="body_texto_titulo">Óleo capilar:</h1>
-            <h3 class="body_texto">Uso nas pontas do cabelo quando acordo e antes de dormir para proteger as pontas dos danos do dia a dia e deixar uma aparência mais sedosa.</h3>
-            <h3 class="body_texto">Também costumo passar um pouco de um óleo levinho antes da máscara de tratamento, deixa um acabamento incrível!</h3>
-            <h3 class="body_texto">Gosto muito do óleo de argan da Lolla, o óleo extraordinário da Elseve e do Oil Reflections da Wella.</h3>
+            <h1 class="body_texto_titulo">Esta é Agata, a gata.</h1>
+            <h3 class="body_texto">Branca e rosa, elegante e agressiva, talvez um pouco carente em dias frios, e ama uma saidinha.</h3>
+            <h3 class="body_texto">Te gosta e tem ranço ao mesmo tempo.</h3>
+            <h3 class="body_texto">E tem o mesmo nome da minha irmã, o que rende ótimas piadas.</h3>
         </section>
     </section>
 </body>
