--- a/gatos.html
+++ b/gatos.html
@@ -28,6 +28,15 @@
             <h3 class="body_texto">E tem o mesmo nome da minha irmã, o que rende ótimas piadas.</h3>
         </section>
     </section>
+    <section class="body">
+        <section class="body_texto">
+            <h1 class="body_texto_titulo">Manuela.</h1>
+            <h3 class="body_texto">Costumava ser medrosa, mas anda meio abusada. Bate na agata e tenta expulsar ela da cama.</h3>
+            <h3 class="body_texto">Quer comida e carinho o tempo todo, sobe em você e morde seu nariz.</h3>
+            <h3 class="body_texto">E pra completar, parece um desenho animado, já que quando começa a correr ela derrapa.</h3>
+        </section>
+        <img  class="body_imagem" src="assets/manuela.png">
+    </section>
 </body>
 <footer class="rodape">
     <p class="rodape_texto">Desenvolvimento e Conteúdo por Erica Federowicz</p>
